# PMundialera

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/mcp-agent-operations/: SKILL.md
.codex/: config.toml
.codex/policies/: 00-governance.md  01-security-and-secrets.md  02-hexagonal-python.md
.codex/skills/football-research/: SKILL.md
.cursor/rules/: 00-project-baseline.mdc  01-security-and-secrets.mdc  02-hexagonal-python.mdc
docs/adr/: 0001-hexagonal-agent-architecture.md
docs/runbooks/: golpredictor.md
memory/: MANIFEST.md  README.md
memory/agents/: golpredictor-operator.md  prediction-calibrator.md  research-analyst.md
memory/policies/: 00-governance.md  01-security-and-secrets.md  02-hexagonal-python.md
memory/rules/: 01-golpredictor-operations.md  02-prediction-workflow.md  03-validation-and-done-definition.md
memory/skills/football-research/: SKILL.md
scripts/windows/: install-startup-shortcut.ps1  register-autostart-task.ps1  run-autonomous.ps1  uninstall-startup-shortcut.ps1  unregister-autostart-task.ps1
src/mundialera/: __init__.py  settings.py
tests/: test_codex_prediction_model.py  test_decision_guardrails.py  test_e2e_prediction_pipeline.py  test_feedback.py  test_functional_cli.py  test_golpredictor_parser.py  test_pool_strategy.py  test_prediction_calibration.py  test_prediction_history_store.py  test_prediction_orchestrator.py  test_probability_profile.py  test_scheduler.py  test_submission_audit.py  test_tournament_state.py  test_web_search_research.py
tests/fixtures/: golpredictor_group.html
(+27 files in other folders)
