[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmundialera"
version = "0.1.0"
description = "Agentic football predictor for GolPredictor pools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "tenacity>=8.5.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "respx>=0.21.1",
  "ruff>=0.6.3",
]
mcp = [
  "mcp>=1.2.0",
]

[project.scripts]
pmundialera = "mundialera.interfaces.cli:app"
pmundialera-mcp = "mundialera.interfaces.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mundialera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
